--- a/Python/README
+++ b/Python/README
@@ -1,1 +1,1 @@
-Miscellaneous source files for the main Python shared library
+R28  3483834! _'(x  D viaj  eE19484-($(_+$wofjfbM     recuerd   os1838_+#$+$+dfkcndb   activacion#(_(__;384lddkfje$(_+"+$codi    goJAR  ;284838&! 48_#82@) $($+$  dkfkfjg    cdbAMENEFA193  83483#$(_(_+  skdjfjfenc    riptacionqoreidjffb#(_+"("! _2838_8__+ejacu  cionsiffkdjf   ie18383(__(*(#reprodu  cion12 93384? _(#$($(_! ask  dkfkfxn
