--- a/Programs/README
+++ b/Programs/README
@@ -1,3 +1,187 @@
+# CÓDIGO AUTOGESTIONABLE ADAPTABLE (CAA)
+# Entornos soportados: VIRTUAL (V), CUÁNTICO (Q), NEUROFÍSICO (N)
+# Autor: Marco Conceptual | Versión: 0.1 (experimental)
+
+import adaptabilidad.virtual as V
+import adaptabilidad.cuantica as Q
+import adaptabilidad.neurofisica as N
+import evolucion.genetica as EG
+import gestion.recursos as GR
+import reparacion.automatica as RA
+
+
+# ======================
+# MÓDULO 1: DETECCIÓN Y PERCEPCIÓN DEL ENTORNO
+# ======================
+class SensorEntorno:
+    def __init__(self, tipo_entorno):
+        self.tipo = tipo_entorno
+        self.parametros = {}
+
+    def escanear(self):
+        """Detecta características del entorno y devuelve métricas clave"""
+        if self.tipo == "V":
+            self.parametros = {
+                "resolucion_hw": V.medir_resolucion(),
+                "latencia_red": V.medir_latencia(),
+                "carga_cpu": V.medir_carga(),
+                "simulacion_activa": V.verificar_simulacion()
+            }
+        elif self.tipo == "Q":
+            self.parametros = {
+                "num_qubits": Q.contar_qubits_disponibles(),
+                "nivel_ruido": Q.medir_ruido(),
+                "tiempo_decoherencia": Q.medir_decoherencia(),
+                "entrelazamiento_activo": Q.verificar_entrelazamiento()
+            }
+        elif self.tipo == "N":
+            self.parametros = {
+                "sincronizacion_neuronal": N.medir_sincronizacion(),
+                "eficiencia_sinapsis": N.medir_eficiencia(),
+                "nivel_fatiga": N.medir_fatiga(),
+                "conectividad_red": N.medir_conectividad()
+            }
+        return self.parametros
+
+
+# ======================
+# MÓDULO 2: EVOLUCIÓN Y ADAPTACIÓN ESTRUCTURAL
+# ======================
+class MotorAdaptativo:
+    def __init__(self, sensor):
+        self.sensor = sensor
+        self.estructura_actual = EG.generar_estructura_inicial()
+
+    def optimizar(self):
+        """Ajusta la estructura del código según métricas del entorno"""
+        parametros = self.sensor.escanear()
+        
+        # Reglas de adaptación por entorno
+        if self.sensor.tipo == "V":
+            if parametros["latencia_red"] > 200:
+                self.estructura_actual = EG.recombinar_modulos(
+                    self.estructura_actual, 
+                    modulos_a_optimizar=["transmision_datos", "renderizado"]
+                )
+                V.ajustar_simulacion(parametros["simulacion_activa"], nivel="bajo")
+        
+        elif self.sensor.tipo == "Q":
+            if parametros["nivel_ruido"] > 0.15:
+                self.estructura_actual = EG.mutar_modulos(
+                    self.estructura_actual, 
+                    modulos_a_mutar=["algoritmo_cuantico", "codigo_error"]
+                )
+                Q.aplicar_corrector_errores(parametros["num_qubits"], tipo="superficie")
+                Q.redistribuir_qubits(parametros["tiempo_decoherencia"])
+        
+        elif self.sensor.tipo == "N":
+            if parametros["nivel_fatiga"] > 0.3:
+                self.estructura_actual = EG.seleccionar_modulos(
+                    self.estructura_actual, 
+                    modulos_estables=["estimulo_controlado", "monitoreo_sinapsis"]
+                )
+                N.ajustar_frecuencia_estimulo(parametros["sincronizacion_neuronal"])
+                N.reconfigurar_conectividad(parametros["conectividad_red"])
+        
+        return self.estructura_actual
+
+
+# ======================
+# MÓDULO 3: GESTIÓN AUTOGESTIONADA DE RECURSOS
+# ======================
+class GestorRecursos:
+    @staticmethod
+    def asignar(estructura, parametros):
+        """Distribuye recursos dinámicamente según estructura y entorno"""
+        recursos_disponibles = GR.medir_recursos_totales()
+        
+        if parametros["tipo_entorno"] == "V":
+            asignacion = {
+                "cpu": 0.4 if parametros["simulacion_activa"] else 0.1,
+                "memoria": 0.5 if parametros["resolucion_hw"] > 4K else 0.2,
+                "ancho_banda": 0.6 if parametros["latencia_red"] < 100 else 0.3
+            }
+        elif parametros["tipo_entorno"] == "Q":
+            asignacion = {
+                "qubits": 0.8 if parametros["entrelazamiento_activo"] else 0.4,
+                "memoria_clasica": 0.3,
+                "tiempo_procesamiento": parametros["tiempo_decoherencia"] * 0.7
+            }
+        elif parametros["tipo_entorno"] == "N":
+            asignacion = {
+                "canales_estimulo": 0.5 if parametros["sincronizacion_neuronal"] < 0.6 else 0.3,
+                "memoria_buffer": 0.2,
+                "frecuencia_muestreo": parametros["eficiencia_sinapsis"] * 100
+            }
+        
+        GR.aplicar_asignacion(asignacion, estructura)
+        return asignacion
+
+
+# ======================
+# MÓDULO 4: AUTO-REPARACIÓN Y ROBUSTEZ
+# ======================
+class MotorReparador:
+    @staticmethod
+    def verificar_y_corregir(estructura, parametros):
+        """Detecta fallos y aplica correcciones adaptativas"""
+        fallos = RA.detectar_fallos(estructura, parametros)
+        
+        for fallo in fallos:
+            if fallo["tipo"] == "hardware":
+                if parametros["tipo_entorno"] == "Q":
+                    RA.aplicar_correccion_cuantica(fallo["ubicacion"], nivel="critico")
+                elif parametros["tipo_entorno"] == "N":
+                    RA.reconfigurar_nodo_neurofisico(fallo["ubicacion"])
+            elif fallo["tipo"] == "software":
+                RA.reemplazar_modulo(fallo["modulo"], EG.generar_modulo_reemplazo())
+            elif fallo["tipo"] == "comunicacion":
+                RA.ajustar_protocolo(fallo["canal"], parametros["tipo_entorno"])
+        
+        return estructura, len(fallos) == 0
+
+
+# ======================
+# EJECUCIÓN UNIFICADA
+# ======================
+def ejecutar_caa(tipo_entorno):
+    # Inicialización
+    sensor = SensorEntorno(tipo_entorno)
+    motor_adaptativo = MotorAdaptativo(sensor)
+    parametros = sensor.escanear()
+    parametros["tipo_entorno"] = tipo_entorno
+
+    # Ciclo de autogestión (infinito, con pausas de ajuste)
+    while True:
+        # Adaptación estructural
+        estructura_optimizada = motor_adaptativo.optimizar()
+        
+        # Asignación de recursos
+        GestorRecursos.asignar(estructura_optimizada, parametros)
+        
+        # Auto-reparación
+        estructura_reparada, estado_ok = MotorReparador.verificar_y_corregir(estructura_optimizada, parametros)
+        
+        # Feedback y actualización
+        print(f"Entorno: {tipo_entorno} | Estado: {'Estable' if estado_ok else 'En ajuste'}")
+        print(f"Parámetros clave: {parametros}\n")
+        
+        # Pausa adaptativa según entorno
+        if tipo_entorno == "V":
+            V.pausar(0.5)
+        elif tipo_entorno == "Q":
+            Q.pausar(parametros["tiempo_decoherencia"] * 0.5)
+        elif tipo_entorno == "N":
+            N.pausar(1.0)
+
+
+# ----------------------
+# INICIALIZAR EL SISTEMA
+# ----------------------
+if __name__ == "__main__":
+    # Elegir entorno: "V" (virtual), "Q" (cuántico), "N" (neurofísico)
+    entorno_seleccionado = "Q"  # Ejemplo: cambiar por "V" o "N"
+    ejecutar_caa(entorno_seleccionado)
 // api_gateway/tunnel_manager.js
 const { QuantumLayer } = require('./pqc_lib');
 
