--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,21 @@
+          .                                            .
+        .n                 .                 n.
+      .u '                 .                 ' u.
+     +u                       .                  u+
+    :8'                       .                  `8:
+    |8                        .                   8|
+    |8         S O B E R A N Í A  T O T A L       8|
+    |8          ARQUITECTO ALVAREZ RAMIREZ        8|
+    |8.                       .                  .8|
+    `8u                       .                  u8'
+     `+8u                     .                u8+'
+        `"u.                  .              .u"'
+           `"u.               .           .u"'
+              `"u.            .        .u"'
+                 `"u.         .     .u"'
+                    `"u.      .  .u"'
+                       `"u.   .u"'
+                          `"u"'
 """
 SISTEMA: TELEMETRÍA DE DESCONEXIÓN SOBERANA
 AUTOR: ARQUITECTO ALVAREZ RAMIREZ
