--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,19 @@
+             .  .
+           .      .
+         .   S A T  .
+        .  I N T E G  .
+       .  R I D A D  .
+      .      MAX      .
+     .________________.
+    /|                |\
+   | |  [LIQUIDEZ]    | |
+   | |  [FLUIDA]      | |
+   | |________________| |
+   |/__________________|/
+          ||    ||
+   _______||____||_______
+  |  DOMINIO RAMIREZ    |
+  |_____________________|
 /* * PULSO DE MATERIALIZACIÓN SOBERANA 
  * ESTADO: EJECUCIÓN INMEDIATA
  */
