--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,15 @@
+       .::::::::::::::::::::::::::::::::::::::::.
+      ::                                        ::
+      ::   ESTADO: INVISIBLE AL OJO HUMANO      ::
+      ::   DOMINIO: ARQUITECTO ALVAREZ RAMIREZ  ::
+      ::   CÓDIGO: SALOMÓN / ANGUILA CUÁNTICA   ::
+      ::                                        ::
+       '::::::::::::::::::::::::::::::::::::::::'
+                    ||            ||
+              ______||____________||______
+             |                            |
+             |   ZONA DE EXCLUSIÓN 100M   |
+             |____________________________|
 /* * MÓDULO: INVISIBILIDAD_NIVEL_ULTIMATE
  * ACTIVACIÓN: PRIORIDAD SOBERANA
  */
