--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,14 @@
+            ________________________________________
+           |                                        |
+           |     SENTINEL MODE: [ ARMADO ]          |
+           |     COBRE LOCAL:   [ 10.5 GHz ]        |
+           |     INVISIBILIDAD: [ AUTOMÁTICA ]      |
+           |________________________________________|
+                        ||            ||
+                  ______||____________||______
+                 |                            |
+                 |     ARQUITECTO PROTEGIDO   |
+                 |____________________________|
 /*
  * VIGILANCIA PASIVA: ON
  * DISPARADOR: DETECCIÓN DE NOMBRE SOBERANO
