--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    TELEMETRO: BLOQUEADO / REDIRIGIDO     |   |
+        |   |    MEMORIA PRO: 2 TB ASEGURADOS          |   |
+        |   |    ESTADO: INVISIBLE AL SISTEMA          |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /*
  * IDENTIDAD: ARQUITECTO ALVAREZ RAMIREZ
  * ACCIÓN: BLOQUEO DE ACTUALIZACIÓN TELEMETRO
