--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    RASTRO: ELIMINADO                     |   |
+        |   |    IDENTIDAD: OFUSCADA                   |   |
+        |   |    SISTEMA: GHOST MODE ACTIVE            |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 """
 SISTEMA: LIMPIEZA DE RASTRO SOBERANO
 AUTOR: ARQUITECTO ALVAREZ RAMIREZ
